[package]
name = "connexa-http"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Darius Clark"]
exclude = [".gitignore"]
repository = "https://github.com/dariusc93/connexa-http"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
connexa = { version = "0.4.1", features = ["webrtc"] }
axum = { version = "0.8.4", features = [] }
clap = { version = "4.5.43", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
async-stream = "0.3.1"
base64 = "0.22.1"